update from notion on

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="referrer" content="always" />
+  <meta name="description" content="Personal page of Robin Paul." />
+
+  <title>Robin Paul</title>
+  <link href="/css/main.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div id="content" style="margin-top: 2em;">
+    <div class="articles-list-wrap flex-col">
+      <div>
+        
+        <div style="display:flex; flex-direction: row; justify-content: space-between; align-items: center;">
+          <div>
+            <a href="/archives.html">See all...</a>
+          </div>
+          <div class="headline" style="font-size:80%">
+            <a href="/atom.xml">RSS/Atom feed</a>
+          </div>
+        </div>
+
+        <hr />
+
+        
+        <div style="margin-top: 1em; margin-top: 0; margin-bottom: 0">
+          <p></p><div class="notion-page" id="8e1fd96e-4f25-4b3f-8307-bc3f5a3bfe0d"><div id="03cc1c77-d403-4fce-a145-b74d1d5afa6f" class="">Hello.. how are you</div><div class="page"><a href="/article/99c6a1d7f4e4434999d37614e812f5bc/sub-page.html">Sub page</a></div></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr />
+  
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169358587-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-169358587-1');
+</script>
+
+
+</body>
+
+</html>
