--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://example.com/">
-<link rel="canonical" href="https://example.com/">
+<title>Redirecting to https://www.notion.so/Robin-s-Board-231640217bad4e32bb585298656075d7</title>
+<meta http-equiv="refresh" content="0; URL=https://www.notion.so/Robin-s-Board-231640217bad4e32bb585298656075d7">
+<link rel="canonical" href="https://www.notion.so/Robin-s-Board-231640217bad4e32bb585298656075d7/">
